--- a/RSGD/.classpath
+++ b/RSGD/.classpath
@@ -3,5 +3,73 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/Jama-1.0.3.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.haifengl.smile-benchmark-1.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.haifengl.smile-demo-1.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.haifengl.smile-scala-1.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.haifengl.smile-nlp-1.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.haifengl.smile-plot-1.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.haifengl.smile-interpolation-1.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.haifengl.smile-core-1.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.haifengl.smile-graph-1.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.haifengl.smile-netlib-1.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.haifengl.smile-data-1.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.haifengl.smile-math-1.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.haifengl.smile-shell-1.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.ammonite_2.12.3-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.ammonite-repl_2.12.3-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.ammonite-compiler_2.12.3-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.ammonite-ops_2.12-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.ammonite-util_2.12-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.ammonite-runtime_2.12-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.ammonite-terminal_2.12-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/org.scala-lang.scala-library-2.12.3.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/org.scala-lang.scala-compiler-2.12.3.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/org.scala-lang.scala-reflect-2.12.3.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/io.get-coursier.coursier-cache_2.12-1.0.0-RC8.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/io.get-coursier.coursier_2.12-1.0.0-RC8.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/org.scalaz.scalaz-core_2.12-7.2.13.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/org.scalaz.scalaz-effect_2.12-7.2.13.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/org.scalaz.scalaz-concurrent_2.12-7.2.13.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.javaparser.javaparser-core-3.2.5.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.pprint_2.12-0.5.2.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.fansi_2.12-0.2.4.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.geny_2.12-0.1.2.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.scalaparse_2.12-0.4.3.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.fastparse_2.12-0.4.3.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.fastparse-utils_2.12-0.4.3.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/jline.jline-2.14.3.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/org.slf4j.slf4j-simple-1.7.25.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/org.slf4j.slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.upickle_2.12-0.4.4.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.derive_2.12-0.4.4.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/org.scalaj.scalaj-http_2.12-2.3.0.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/org.spire-math.jawn-parser_2.12-0.10.3.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.scopt.scopt_2.12-3.5.0.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/org.scala-lang.modules.scala-xml_2.12-1.0.6.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.lihaoyi.sourcecode_2.12-0.1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/org.javassist.javassist-3.21.0-GA.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.thoughtworks.xstream.xstream-1.4.8.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.netlib.core-1.1.2.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.netlib.netlib-native_system-linux-armhf-1.1-natives.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.netlib.netlib-native_system-linux-i686-1.1-natives.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.netlib.netlib-native_system-linux-x86_64-1.1-natives.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.netlib.netlib-native_ref-linux-armhf-1.1-natives.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.netlib.netlib-native_ref-linux-i686-1.1-natives.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.netlib.netlib-native_ref-linux-x86_64-1.1-natives.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.netlib.netlib-native_system-win-x86_64-1.1-natives.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.netlib.netlib-native_system-win-i686-1.1-natives.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.netlib.netlib-native_system-osx-x86_64-1.1-natives.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.netlib.native_system-java-1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.netlib.netlib-native_ref-win-x86_64-1.1-natives.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.netlib.netlib-native_ref-win-i686-1.1-natives.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.netlib.netlib-native_ref-osx-x86_64-1.1-natives.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.netlib.native_ref-java-1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.github.fommil.jniloader-1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/net.sourceforge.f2j.arpack_combined_all-0.1.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/org.swinglabs.swingx-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/xpp3.xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/org.swinglabs.swing-worker-1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/com.jhlabs.filters-2.0.235.jar"/>
+	<classpathentry kind="lib" path="/Users/xiongha/git/RSGD/RSGD/libs/xmlpull.xmlpull-1.1.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
